Prepare Document Analysis MCP for Streamlit Cloud deployment

--- a/.env
+++ b/.env
@@ -1,21 +1,26 @@
 # Copy this file to .env and fill in your actual values
 
-# MongoDB Connection String
-# For local MongoDB (via Compass): Use the local connection string
-# For Atlas: Use the Atlas connection string
-MONGODB_CONNECTION_STRING=mongodb://localhost:27017/document_analysis
+# MongoDB Atlas Connection String (Cloud Database)
+# Replace <username>, <password>, and <cluster-url> with your Atlas credentials
+# Example: mongodb+srv://username:password@cluster0.abc123.mongodb.net/document_analysis?retryWrites=true&w=majority
+# Fixed Atlas connection string with proper database name and URL-encoded password
+# Original password <Abhi_1921> → URL-encoded %3CAbhi_1921%3E (< becomes %3C, > becomes %3E)
+# Added /document_analysis before the query parameters
+# If your actual password is Abhi_1921 (without angle brackets):
+MONGODB_CONNECTION_STRING=mongodb+srv://agrawalabhinav38_db_user:Abhi_1921@cluster1.bj9yesu.mongodb.net/document_analysis?retryWrites=true&w=majority&appName=Cluster1
 
 # Google AI API Key
 # Get this from https://makersuite.google.com/app/apikey
 GOOGLE_API_KEY=AIzaSyBvQIapso5qR59LGzwQBXf_mvyFPQpVV2o
 
-# Database name (will be created automatically)
+# Database name (will be created automatically in Atlas)
 DATABASE_NAME=document_analysis
 
-# Collection name for document chunks (optional, defaults to 'document_chunks')
+# Collection name for document chunks
 COLLECTION_NAME=document_chunks
 
-# Vector search index name (optional, defaults to 'vector_index')
-# Note: Local MongoDB doesn't support Atlas Vector Search
-# Will use text-based fallback search instead
+# Vector search index name (Atlas Vector Search)
 VECTOR_INDEX_NAME=vector_index
+
+# Environment (for deployment)
+ENVIRONMENT=production
