--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: document-analysis-mcp
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run document_streamlit_app.py --server.port=$PORT --server.address=0.0.0.0
+    startCommand: python main.py
     envVars:
       - key: MONGODB_CONNECTION_STRING
         sync: false
