--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-pymongo
-langchain
-langchain-google-genai
-langchain-community
-python-dotenv
-beanie
-pydantic
-google-generativeai
-mcp[cli]
-streamlit
-requests
-motor
-PyPDF2
-python-docx
-tenacity
-certifi
+pymongo>=4.6.0
+langchain>=0.1.0
+langchain-google-genai>=1.0.0
+langchain-community>=0.0.20
+python-dotenv>=1.0.0
+beanie>=1.23.0
+pydantic>=2.5.0
+google-generativeai>=0.3.0
+mcp[cli]>=0.4.0
+streamlit>=1.28.0
+requests>=2.31.0
+motor>=3.3.0
+PyPDF2>=3.0.0
+python-docx>=1.1.0
+tenacity>=8.2.0
+certifi>=2023.11.17
