Fix MongoDB connection timeout issues for Render deployment
- Add Render-optimized connection strategy with longer timeouts
- Create startup script with health checks and diagnostics
- Enhance cloud connection with better error handling
- Add connection test script for troubleshooting
- Update render.yaml to use enhanced startup script

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: document-analysis-mcp
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
+    startCommand: python start_render.py
     envVars:
       - key: MONGODB_CONNECTION_STRING
         sync: false
